--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <div class="default"></div>
     <h1>Hola Mundo</h1>
     <script src="./script.js"></script>
 </body>
